--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manuel e Ylenia – Matrimonio</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -18,18 +16,15 @@
     <header class="header">
         <div class="container header-inner">
             <div class="logo">Manuel e Ylenia</div>
-
             <nav class="nav">
-                <button class="nav-toggle" aria-label="Apri menu">☰</button>
+                <button class="nav-toggle">☰</button>
                 <ul class="nav-list">
                     <li><a href="#matrimonio">Il matrimonio</a></li>
                     <li><a href="#location">Location</a></li>
                     <li><a href="#programma">Programma</a></li>
-                    <li><a href="#come-arrivare">Come arrivare</a></li>
                     <li><a href="#rsvp" class="cta">RSVP</a></li>
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#regalo">Regalo</a></li>
-                    <li><a href="#foto">Foto</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,20 +32,11 @@
 
     <section class="hero section">
         <div class="container">
-            <h1><br>Manuel e Ylenia</h1>
+            <h1>Manuel e Ylenia</h1>
             <p class="hero-meta">17 Settembre 2026 · Scandriglia (RI)</p>
             <p class="hero-text">
-                Ci siamo!<br><br>
-
-                Abbiamo creato questo spazio per raccogliere tutte le informazioni relative al nostro matrimonio: dalla location agli orari, fino a tutti i dettagli pratici per partecipare alla cerimonia.<br><br>
-
-                La nostra scelta è stata un matrimonio di giorno, immerso nel verde a Scandriglia, e siamo felici di potervi raccontare ogni dettaglio tramite questa pagina.<br><br>
-
-                Per confermare la vostra partecipazione e farci sapere eventuali esigenze alimentari, vi chiediamo di compilare il form incorporato in questa pagina.<br><br>
-
-                Vi invitiamo a visitare frequentemente per restare aggiornati su ogni novità. Non vediamo l’ora di festeggiare insieme a voi!<br><br>
-
-                Manuel e Ylenia
+                Abbiamo creato questo spazio per raccogliere tutti i dettagli del nostro grande giorno. 
+                Non vediamo l'ora di festeggiare con voi!
             </p>
         </div>
     </section>
@@ -58,92 +44,37 @@
     <section id="matrimonio" class="section">
         <div class="container">
             <h2>Il matrimonio</h2>
-            <p>
-                Matrimonio civile autentico.
-                Cerimonia e ricevimento nello stesso luogo.
-            </p>
-            <p>
-                Vi aspettiamo per una giornata all'insegna della semplicità,
-                dell'autenticità e soprattutto della compagnia.
-            </p>
+            <p>Cerimonia civile e ricevimento si terranno nello stesso luogo per goderci la giornata in totale relax.</p>
         </div>
     </section>
 
     <section id="location" class="section alt">
         <div class="container">
             <h2>Location</h2>
-            <p>La location si trova a Scandriglia (RI), parcheggi disponibili in loco.</p>
-
+            <p>Strada Passo di S. Salvatore, 16 - Scandriglia (RI)</p>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.50567227495!2d12.809315315354972!3d42.16450417920197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132ff1e1a5a0d33b%3A0x6a0f0d2c3e1b3d7a!2sStrada%20Passo%20di%20S.%20Salvatore%2C%2016%2C%2002038%20Scandriglia%20RI!5e0!3m2!1sit!2sit!4v1678912345678!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
-    </section>
-
-    <section id="planimetria" class="section alt">
-        <div class="container">
-            <h2>Planimetria della location</h2>
-            <p>Ecco la planimetria per orientarvi meglio.<br><br></p>
-
-            <div class="planimetria-container">
-                <img src="assets/planimetria.png" alt="Planimetria location" class="planimetria-image">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2954.2123!2d12.8423!3d42.1743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDEwJzI3LjUiTiAxMsKwNTAnMzIuMyJF!5e0!3m2!1sit!2sit!4v1700000000000" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </section>
 
     <section id="programma" class="section">
         <div class="container">
-            <h2>Programma della giornata</h2>
-            <p>Questo è quello che potete aspettarvi (più o meno puntuale).</p>
-
+            <h2>Programma</h2>
             <ul class="timeline">
                 <li><strong>11:00</strong> – Arrivo invitati</li>
-                <li><strong>11:30</strong> – Cerimonia civile</li>
-                <li><strong>12:00</strong> – Aperitivo</li>
-                <li><strong>14:00</strong> – Pranzo</li>
-                <li><strong>16:00</strong> – Torta</li>
-                <li><strong>16:30</strong> – Musica!</li>
-                <li><strong>18:00</strong> – Baci e abbracci</li>
+                <li><strong>11:30</strong> – Cerimonia</li>
+                <li><strong>13:00</strong> – Aperitivo e Pranzo</li>
+                <li><strong>17:00</strong> – Torta e Festa</li>
             </ul>
-        </div>
-    </section>
-
-    <section id="come-arrivare" class="section alt">
-        <div class="container">
-            <h2>Come arrivare</h2>
-            <p>
-                La location si trova a [Città/Area].
-                Parcheggi disponibili in loco.
-            </p>
-
-            <p>
-                <strong>Indirizzo:</strong><br>
-                Strada Passo di S. Salvatore, 16<br>
-                02038 Scandriglia (RI)
-            </p>
-
-            <p>
-                <strong>In auto:</strong><br>
-                [Indicazioni generali per chi arriva in auto]
-            </p>
-
-            <p>
-                <strong>Parcheggi:</strong><br>
-                [Indicazioni su parcheggi disponibili]
-            </p>
         </div>
     </section>
 
     <section id="rsvp" class="section highlight">
         <div class="container">
             <h2>RSVP</h2>
-            <p>
-                Per favore, confermate la presence per ogni persona invitata.
-                Bastano due minuti e ci aiuta a organizzare al meglio.
-            </p>
-
             <div class="form-wrapper">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeB459Lh6XBT8R19BAUzuZX_jGAO_TO8RUJ_Jvz4HRvgQHFUg/viewform?embedded=true" style="width: 100%; min-height: 800px; border: none;"></iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeB459Lh6XBT8R19BAUzuZX_jGAO_TO8RUJ_Jvz4HRvgQHFUg/viewform?embedded=true">Caricamento...</iframe>
             </div>
         </div>
     </section>
@@ -151,66 +82,13 @@
     <section id="faq" class="section">
         <div class="container">
             <h2>FAQ</h2>
-            <p>Prima che ci scriviate in trenta. 😉</p>
-
             <div class="faq-item">
-                <button class="faq-question">Posso portare i bambini?</button>
-                <div class="faq-answer">
-                    <p>
-                        Certo! I bambini sono benvenuti.
-                        Se allergie o esigenze particolari, segnalate nel form RSVP.
-                    </p>
-                </div>
+                <button class="faq-question">Dress code?</button>
+                <div class="faq-answer"><p>Comodi e autentici, come a una cena tra amici.</p></div>
             </div>
-
             <div class="faq-item">
-                <button class="faq-question">A che ora devo arrivare?</button>
-                <div class="faq-answer">
-                    <p>
-                        Idealmente tra le 15:15 e le 15:45.
-                        La cerimonia inizia alle 16:00 in punto, non vogliamo che vi perderete il bello.
-                    </p>
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <button class="faq-question">È obbligatorio un regalo?</button>
-                <div class="faq-answer">
-                    <p>
-                        Ma no! La vostra presence è il regalo più importante.
-                        Se volete comunque fare qualcosa, la vostra compagnia e le vostre foto valgono più di mille cose.
-                    </p>
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <button class="faq-question">Che cosa devo indossare?</button>
-                <div class="faq-answer">
-                    <p>
-                        Vestiti comodi e belli, come se andaste a una cena con amici.
-                        Niente dress code formale: semplicità e autenticità.
-                    </p>
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <button class="faq-question">Posso portare un ospite non sulla lista?</button>
-                <div class="faq-answer">
-                    <p>
-                        Meglio contattarci prima. Cerchiamo di organizzare al meglio,
-                        quindi se avete un'esigenza speciale, scrivete direttamente.
-                    </p>
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <button class="faq-question">E se piove?</button>
-                <div class="faq-answer">
-                    <p>
-                        Niente paura! La location ha spazi coperti.
-                        Il matrimonio si farà comunque, pioggia o sole.
-                    </p>
-                </div>
+                <button class="faq-question">Bambini?</button>
+                <div class="faq-answer"><p>Certo! Segnalate eventuali esigenze nel form RSVP.</p></div>
             </div>
         </div>
     </section>
@@ -218,48 +96,13 @@
     <section id="regalo" class="section alt">
         <div class="container">
             <h2>Regalo</h2>
-            <p>
-                La vostra presenza è il regalo più bello che possiamo ricevere! Se però volete farci un pensiero in più, ci piacerebbe che condivideste con noi le foto fatte durante il matrimonio.
-            </p>
-            <p>
-                Nella cartella Drive troverete già alcune foto caricate da noi. A fine evento, se volete, caricate le vostre foto lì.
-            </p>
-            <a href="#" class="button secondary">Accedi alla cartella foto</a>
-            <p class="muted" style="margin-top: 1rem;">
-                Il link sarà disponibile a breve. Vi arriverà via email dopo la conferma della presenza.
-            </p>
-            <p style="margin-top: 2rem;">
-                Se volete farci un regalo materiale, il nostro sogno sarebbe un camper! Se desiderate sostenerci economicamente per acquistarlo, ecco l'IBAN:
-            </p>
-            <p style="font-weight: bold; font-family: monospace; background: #f5f5f5; padding: 1rem; border-radius: 4px;">
-                IT60X0542811101000000123456
-            </p>
-        </div>
-    </section>
-
-    <section id="foto" class="section alt">
-        <div class="container">
-            <h2>Le vostre foto</h2>
-            <p>
-                Se fate foto durante la giornata, condividetele con noi!
-                Vi basta accedere alla cartella Drive (link sotto) e caricare gli scatti.
-            </p>
-            <a href="#" class="button secondary">Carica le foto</a>
-            <p class="muted" style="margin-top: 1rem;">
-                Il link per caricare le foto sarà disponibile a breve. Vi arriverà via email dopo la conferma della presenza.
-            </p>
+            <p>Il nostro sogno è un camper per le nostre avventure!</p>
+            <p class="iban">IBAN: IT60X0542811101000000123456</p>
         </div>
     </section>
 
     <footer class="footer">
-        <div class="container">
-            <p>
-                Manuel Di Castro & Ylenia Piromalli<br>
-                17 Settembre 2026<br>
-                <br>
-                Grazie di cuore per essere parte di questa giornata. 💚
-            </p>
-        </div>
+        <p>Manuel & Ylenia - 2026 💚</p>
     </footer>
 
     <script src="js/main.js"></script>
