--- a/index.html
+++ b/index.html
@@ -1,110 +1,87 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manuel e Ylenia – Matrimonio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Manuel e Ylenia – Matrimonio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
-    <canvas id="canvas-bg"></canvas> 
+  <canvas id="canvas-bg"></canvas>
 
-    <header class="header">
-        <div class="container header-inner">
-            <div class="logo">Manuel e Ylenia</div>
-            <nav class="nav">
-                <button class="nav-toggle">☰</button>
-                <ul class="nav-list">
-                    <li><a href="#matrimonio">Il matrimonio</a></li>
-                    <li><a href="#location">Location</a></li>
-                    <li><a href="#programma">Programma</a></li>
-                    <li><a href="#rsvp" class="cta">RSVP</a></li>
-                    <li><a href="#faq">FAQ</a></li>
-                    <li><a href="#regalo">Regalo</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <header class="header">
+    <div class="container header-inner">
+      <div class="logo">Manuel e Ylenia</div>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li><a href="#matrimonio">Il matrimonio</a></li>
+          <li><a href="#location">Location</a></li>
+          <li><a href="#programma">Programma</a></li>
+          <li><a href="#rsvp" class="cta">RSVP</a></li>
+          <li><a href="#faq">FAQ</a></li>
+          <li><a href="#regalo">Regalo</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section class="hero section">
-        <div class="container">
-            <h1>Manuel e Ylenia</h1>
-            <p class="hero-meta">17 Settembre 2026 · Scandriglia (RI)</p>
-            <p class="hero-text">
-                Abbiamo creato questo spazio per raccogliere tutti i dettagli del nostro grande giorno. 
-                Non vediamo l'ora di festeggiare con voi!
-            </p>
-        </div>
-    </section>
+  <section class="hero section">
+    <div class="container">
+      <h1>Manuel e Ylenia</h1>
+      <p class="hero-meta">17 Settembre 2026 · Scandriglia (RI)</p>
+      <p class="hero-text">
+        Ci siamo!<br><br>
+        Abbiamo creato questo spazio per raccogliere tutte le informazioni relative al nostro matrimonio: dalla location agli orari, fino a tutti i dettagli pratici.<br><br>
+        Manuel e Ylenia
+      </p>
+    </div>
+  </section>
 
-    <section id="matrimonio" class="section">
-        <div class="container">
-            <h2>Il matrimonio</h2>
-            <p>Cerimonia civile e ricevimento si terranno nello stesso luogo per goderci la giornata in totale relax.</p>
-        </div>
-    </section>
+  <section id="matrimonio" class="section">
+    <div class="container">
+      <h2>Il matrimonio</h2>
+      <p>Matrimonio civile autentico. Cerimonia e ricevimento nello stesso luogo.</p>
+    </div>
+  </section>
 
-    <section id="location" class="section alt">
-        <div class="container">
-            <h2>Location</h2>
-            <p>Strada Passo di S. Salvatore, 16 - Scandriglia (RI)</p>
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2954.2123!2d12.8423!3d42.1743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDEwJzI3LjUiTiAxMsKwNTAnMzIuMyJF!5e0!3m2!1sit!2sit!4v1700000000000" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-        </div>
-    </section>
+  <section id="location" class="section alt">
+    <div class="container">
+      <h2>Location</h2>
+      <p>La location si trova a Scandriglia (RI).</p>
+      <div class="map">
+        <iframe src="http://googleusercontent.com/maps.google.com/3" width="640" height="480"></iframe>
+      </div>
+    </div>
+  </section>
 
-    <section id="programma" class="section">
-        <div class="container">
-            <h2>Programma</h2>
-            <ul class="timeline">
-                <li><strong>11:00</strong> – Arrivo invitati</li>
-                <li><strong>11:30</strong> – Cerimonia</li>
-                <li><strong>13:00</strong> – Aperitivo e Pranzo</li>
-                <li><strong>17:00</strong> – Torta e Festa</li>
-            </ul>
-        </div>
-    </section>
+  <section id="programma" class="section">
+    <div class="container">
+      <h2>Programma</h2>
+      <ul class="timeline">
+        <li><strong>11:00</strong> – Arrivo invitati</li>
+        <li><strong>11:30</strong> – Cerimonia civile</li>
+        <li><strong>14:00</strong> – Pranzo</li>
+      </ul>
+    </div>
+  </section>
 
-    <section id="rsvp" class="section highlight">
-        <div class="container">
-            <h2>RSVP</h2>
-            <div class="form-wrapper">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeB459Lh6XBT8R19BAUzuZX_jGAO_TO8RUJ_Jvz4HRvgQHFUg/viewform?embedded=true">Caricamento...</iframe>
-            </div>
-        </div>
-    </section>
+  <section id="rsvp" class="section highlight">
+    <div class="container">
+      <h2>RSVP</h2>
+      <div class="form-wrapper">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeB459Lh6XBT8R19BAUzuZX_jGAO_TO8RUJ_Jvz4HRvgQHFUg/viewform?embedded=true" style="width: 100%; min-height: 800px; border: none;"></iframe>
+      </div>
+    </div>
+  </section>
 
-    <section id="faq" class="section">
-        <div class="container">
-            <h2>FAQ</h2>
-            <div class="faq-item">
-                <button class="faq-question">Dress code?</button>
-                <div class="faq-answer"><p>Comodi e autentici, come a una cena tra amici.</p></div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">Bambini?</button>
-                <div class="faq-answer"><p>Certo! Segnalate eventuali esigenze nel form RSVP.</p></div>
-            </div>
-        </div>
-    </section>
+  <footer class="footer">
+    <p>Manuel & Ylenia – 17 Settembre 2026 💚</p>
+  </footer>
 
-    <section id="regalo" class="section alt">
-        <div class="container">
-            <h2>Regalo</h2>
-            <p>Il nostro sogno è un camper per le nostre avventure!</p>
-            <p class="iban">IBAN: IT60X0542811101000000123456</p>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <p>Manuel & Ylenia - 2026 💚</p>
-    </footer>
-
-    <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
