--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- 1. TESTO INTRODUTTIVO (CARTA + SOLE PARALLAX) -->
     <section id="intro" class="hero section section--paper section--sun">
       <div class="container">
-        <h1><br>Manuel e Ylenia</h1>
+        <h1>Manuel e Ylenia</h1>
         <p class="hero-meta">17 Settembre 2026 · Scandriglia (RI)</p>
         <p class="hero-text">
           Ci siamo!<br><br>
