--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <!-- 1. TESTO INTRODUTTIVO (CARTA + SOLE PARALLAX) -->
     <section id="intro" class="hero section section--paper section--sun">
       <div class="container">
-        <h1>Manuel e Ylenia</h1>
+        <h1><br>Manuel e Ylenia<br></h1>
         <p class="hero-meta">17 Settembre 2026 · Scandriglia (RI)</p>
         <p class="hero-text">
-          Ci siamo!<br><br>
+          <br>Ci siamo!<br><br>
 
           Abbiamo creato questo spazio per raccogliere tutte le informazioni relative al nostro matrimonio: dalla location agli orari, fino a tutti i dettagli pratici per partecipare alla cerimonia.<br><br>
 
